context menu cancel option; fix context menu overflow when near bottom and right edges of canvas

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@ a[href] {
     width: 100% !important;
     resize: vertical !important;
     overflow: auto !important;
+}
+
+body {
     position: relative;
 }
 
